--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-plugin-jest": "^21.15.1",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "express": "^4.16.3",
+    "mongoose": "^5.1.1",
     "morgan": "^1.9.0"
   },
   "devDependencies": {
