--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "sl9site",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-airbnb-base": "^12.1.0",
